crates/vm/src/snapshots/mu_vm__tests__assignment-6.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
v := 10
v **= 2
print v


# Result (success):
none

# Stdout:
100

