crates/vm/src/snapshots/mu_vm__tests__assignment-8.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
v := none
v ??= 2
print v


# Result (success):
none

# Stdout:
2

