crates/vm/src/snapshots/mu_vm__tests__call_closure-2.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
fn counter(start=0, *, step=1):
  state := { value: start }
  fn inner():
    temp := state.value
    state.value += step
    return temp
  return inner

c := counter()
print c()
print c()
print c()


# Result (success):
none

# Stdout:
0
1
2

