crates/vm/src/snapshots/mu_vm__tests__call_closure-3.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
fn a():
  fn b():
    v := 10
    fn c():
      fn d():
        return v
      return d
    return c
  return b

print a()()()()


# Result (success):
none

# Stdout:
10

